# dpll_algorithm-hust-curriculum-design

./: .gitignore  CMakeLists.txt  README.md
src/: Global.h  cnfparser.cpp  cnfparser.h  dpll.cpp  dpll.h  main.cpp
src/cnffile/: simpletest.cnf
src/resfile/: 1.res  2.res  3.res  4u.res  5.res  6.res  sat-20.res  simpletest.res
